# planit

./: .gitignore  README.md  data.ipynb  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-pages.yml  simulate_interactions.yml
archive/demo/: ingest_AhmedProfile.py  mock_preferences.py
archive/ml/data/: pretrain_cf.py  seed_survey.py  simulate_interactions.py
artifacts/: presentation_itineraries.txt
data/: geoapify_places_api_example.json  survey_responses.csv  user_preference_example.json
demo/: demo.py  ingest_AhmedProfile.py
docs/: ml_fixes_sim.md  ml_overhaul_2026_04_26.md
ml/: benchmark.py  demo.py  ingest_AhmedProfile.py  pipeline.py
ml/api/: main.py  schemas.py
ml/api/routes/: places.py  profile.py  recommend.py
ml/data/: google_takeout.py  pipeline.py  preprocess.py  seed_survey.py  simulate_interactions.py
ml/models/: place_classifier.py  recommender.py  route_optimizer.py  user_profiler.py
ml/notebooks/: 01_prepare_foursquare_data.ipynb  02_stage2_demo.ipynb  03_profile_comparison.ipynb  data_exploration.ipynb
ml/services/: azure_maps_client.py  llm_tagger.py
ml/utilities/: cache.py  embeddings.py  geoapify.py  osm.py
my-react-app/: index.html  package-lock.json  package.json  vite.config.js
my-react-app/public/: 404.html
my-react-app/src/: App.css  App.jsx  main.jsx
my-react-app/src/api/: client.js
my-react-app/src/components/: button.css  confirmdialog.jsx  destination.css  generate.css  home.css  landing.css  navbar.css  profile.css  signup.css  survey.css  tripcard.css  upload.css
my-react-app/src/context/: AuthContext.jsx  DarkModeContext.jsx
server/: README.md  main.py
server/config/: db.py
server/controllers/: interactions.py  likes.py  preferences.py  users.py
server/migrations/: 001_rename_part_type.sql  002_user_interactions.sql  003_recommendation_logs.sql
server/models/: likes.py  places.py  preferences.py  users.py
server/routes/: imports.py  interactions.py  likes.py  places.py  preferences.py  recommend.py  users.py  wake.py
(+17 files in other folders)
