[project]
name = "planit"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # data
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "polars>=0.20,<2.0",

    # ML - Stage 1
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.3",

    # ML - Stages 2-4 (TF-based recommender + OR-Tools optimizer)
    "tensorflow>=2.16,<3.0",
    "tensorflow-recommenders>=0.7",
    "ortools>=9.9",

    # HTTP (backend uses this; ML parser doesn't call HTTP directly)
    "requests>=2.31",

    # dataset download from Google Drive
    "gdown>=5.1",

    # sparse matrices used by Stage 2 (also a scikit-learn dep, but explicit is safer)
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "ipykernel",        # notebook support
    "jupyterlab",
    "matplotlib",
    "seaborn",
]

[tool.pip]
# teammates run: pip install -e ".[dev]"  (dev)  or  pip install -e .  (prod)

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"   # suppress sklearn/tf stub warnings
