[project]
name = "planit"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.0",

    # data
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.12",

    # ML
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.3",
    "ortools>=9.9",

    # HTTP
    "requests>=2.31",
    "httpx>=0.27",
    "python-multipart>=0.0.9",

    # database
    "supabase>=2.0",
    "postgrest>=0.16",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
include = ["ml*", "server*"]

[tool.pip]
# run: pip install -e ".[dev]"  (dev)  or  pip install -e .  (prod)

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"   # suppress sklearn/tf stub warnings
